parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> devices cmds
Rule 2     devices -> device devices
Rule 3     devices -> device
Rule 4     device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES
Rule 5     device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID FECHACHAVES
Rule 6     cmds -> cmd PONTO cmds
Rule 7     cmds -> cmd PONTO
Rule 8     cmd -> SET ID IGUAL var
Rule 9     cmd -> SE obs ENTAO act
Rule 10    cmd -> SE obs ENTAO act SENAO act
Rule 11    cmd -> act
Rule 12    obs -> ID op_logic var
Rule 13    obs -> ID op_logic var ELOGICO obs
Rule 14    op_logic -> MAIOR
Rule 15    op_logic -> MENOR
Rule 16    op_logic -> MAIORIGUAL
Rule 17    op_logic -> MENORIGUAL
Rule 18    op_logic -> IGUALIGUAL
Rule 19    op_logic -> DIFERENTE
Rule 20    var -> NUM
Rule 21    var -> ID
Rule 22    act -> LIGAR ID
Rule 23    act -> DESLIGAR ID
Rule 24    act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN ID
Rule 25    act -> ENVIAR ALERTA ABREPAREN STRING VIRGULA ID FECHAPAREN ID
Rule 26    act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids
Rule 27    lista_ids -> ID VIRGULA lista_ids
Rule 28    lista_ids -> ID

Terminals, with rules where they appear

ABRECHAVES           : 4 5
ABREPAREN            : 24 25 26
ALERTA               : 24 25 26
DESLIGAR             : 23
DIFERENTE            : 19
DISPOSITIVO          : 4 5
DOISPONTOS           : 4 5 26
ELOGICO              : 13
ENTAO                : 9 10
ENVIAR               : 24 25 26
FECHACHAVES          : 4 5
FECHAPAREN           : 24 25 26
ID                   : 4 4 5 8 12 13 21 22 23 24 25 25 27 28
IGUAL                : 8
IGUALIGUAL           : 18
LIGAR                : 22
MAIOR                : 14
MAIORIGUAL           : 16
MENOR                : 15
MENORIGUAL           : 17
NUM                  : 20
PARA                 : 26
PONTO                : 6 7
SE                   : 9 10
SENAO                : 10
SET                  : 8
STRING               : 24 25 26
TODOS                : 26
VIRGULA              : 4 25 27
error                : 

Nonterminals, with rules where they appear

act                  : 9 10 10 11
cmd                  : 6 7
cmds                 : 1 6
device               : 2 3
devices              : 1 2
lista_ids            : 26 27
obs                  : 9 10 13
op_logic             : 12 13
program              : 0
var                  : 8 12 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . devices cmds
    (2) devices -> . device devices
    (3) devices -> . device
    (4) device -> . DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES
    (5) device -> . DISPOSITIVO DOISPONTOS ABRECHAVES ID FECHACHAVES

    DISPOSITIVO     shift and go to state 4

    program                        shift and go to state 1
    devices                        shift and go to state 2
    device                         shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> devices . cmds
    (6) cmds -> . cmd PONTO cmds
    (7) cmds -> . cmd PONTO
    (8) cmd -> . SET ID IGUAL var
    (9) cmd -> . SE obs ENTAO act
    (10) cmd -> . SE obs ENTAO act SENAO act
    (11) cmd -> . act
    (22) act -> . LIGAR ID
    (23) act -> . DESLIGAR ID
    (24) act -> . ENVIAR ALERTA ABREPAREN STRING FECHAPAREN ID
    (25) act -> . ENVIAR ALERTA ABREPAREN STRING VIRGULA ID FECHAPAREN ID
    (26) act -> . ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids

    SET             shift and go to state 7
    SE              shift and go to state 8
    LIGAR           shift and go to state 10
    DESLIGAR        shift and go to state 11
    ENVIAR          shift and go to state 12

    cmds                           shift and go to state 5
    cmd                            shift and go to state 6
    act                            shift and go to state 9

state 3

    (2) devices -> device . devices
    (3) devices -> device .
    (2) devices -> . device devices
    (3) devices -> . device
    (4) device -> . DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES
    (5) device -> . DISPOSITIVO DOISPONTOS ABRECHAVES ID FECHACHAVES

    SET             reduce using rule 3 (devices -> device .)
    SE              reduce using rule 3 (devices -> device .)
    LIGAR           reduce using rule 3 (devices -> device .)
    DESLIGAR        reduce using rule 3 (devices -> device .)
    ENVIAR          reduce using rule 3 (devices -> device .)
    DISPOSITIVO     shift and go to state 4

    device                         shift and go to state 3
    devices                        shift and go to state 13

state 4

    (4) device -> DISPOSITIVO . DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES
    (5) device -> DISPOSITIVO . DOISPONTOS ABRECHAVES ID FECHACHAVES

    DOISPONTOS      shift and go to state 14


state 5

    (1) program -> devices cmds .

    $end            reduce using rule 1 (program -> devices cmds .)


state 6

    (6) cmds -> cmd . PONTO cmds
    (7) cmds -> cmd . PONTO

    PONTO           shift and go to state 15


state 7

    (8) cmd -> SET . ID IGUAL var

    ID              shift and go to state 16


state 8

    (9) cmd -> SE . obs ENTAO act
    (10) cmd -> SE . obs ENTAO act SENAO act
    (12) obs -> . ID op_logic var
    (13) obs -> . ID op_logic var ELOGICO obs

    ID              shift and go to state 18

    obs                            shift and go to state 17

state 9

    (11) cmd -> act .

    PONTO           reduce using rule 11 (cmd -> act .)


state 10

    (22) act -> LIGAR . ID

    ID              shift and go to state 19


state 11

    (23) act -> DESLIGAR . ID

    ID              shift and go to state 20


state 12

    (24) act -> ENVIAR . ALERTA ABREPAREN STRING FECHAPAREN ID
    (25) act -> ENVIAR . ALERTA ABREPAREN STRING VIRGULA ID FECHAPAREN ID
    (26) act -> ENVIAR . ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids

    ALERTA          shift and go to state 21


state 13

    (2) devices -> device devices .

    SET             reduce using rule 2 (devices -> device devices .)
    SE              reduce using rule 2 (devices -> device devices .)
    LIGAR           reduce using rule 2 (devices -> device devices .)
    DESLIGAR        reduce using rule 2 (devices -> device devices .)
    ENVIAR          reduce using rule 2 (devices -> device devices .)


state 14

    (4) device -> DISPOSITIVO DOISPONTOS . ABRECHAVES ID VIRGULA ID FECHACHAVES
    (5) device -> DISPOSITIVO DOISPONTOS . ABRECHAVES ID FECHACHAVES

    ABRECHAVES      shift and go to state 22


state 15

    (6) cmds -> cmd PONTO . cmds
    (7) cmds -> cmd PONTO .
    (6) cmds -> . cmd PONTO cmds
    (7) cmds -> . cmd PONTO
    (8) cmd -> . SET ID IGUAL var
    (9) cmd -> . SE obs ENTAO act
    (10) cmd -> . SE obs ENTAO act SENAO act
    (11) cmd -> . act
    (22) act -> . LIGAR ID
    (23) act -> . DESLIGAR ID
    (24) act -> . ENVIAR ALERTA ABREPAREN STRING FECHAPAREN ID
    (25) act -> . ENVIAR ALERTA ABREPAREN STRING VIRGULA ID FECHAPAREN ID
    (26) act -> . ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids

    $end            reduce using rule 7 (cmds -> cmd PONTO .)
    SET             shift and go to state 7
    SE              shift and go to state 8
    LIGAR           shift and go to state 10
    DESLIGAR        shift and go to state 11
    ENVIAR          shift and go to state 12

    cmd                            shift and go to state 6
    cmds                           shift and go to state 23
    act                            shift and go to state 9

state 16

    (8) cmd -> SET ID . IGUAL var

    IGUAL           shift and go to state 24


state 17

    (9) cmd -> SE obs . ENTAO act
    (10) cmd -> SE obs . ENTAO act SENAO act

    ENTAO           shift and go to state 25


state 18

    (12) obs -> ID . op_logic var
    (13) obs -> ID . op_logic var ELOGICO obs
    (14) op_logic -> . MAIOR
    (15) op_logic -> . MENOR
    (16) op_logic -> . MAIORIGUAL
    (17) op_logic -> . MENORIGUAL
    (18) op_logic -> . IGUALIGUAL
    (19) op_logic -> . DIFERENTE

    MAIOR           shift and go to state 27
    MENOR           shift and go to state 28
    MAIORIGUAL      shift and go to state 29
    MENORIGUAL      shift and go to state 30
    IGUALIGUAL      shift and go to state 31
    DIFERENTE       shift and go to state 32

    op_logic                       shift and go to state 26

state 19

    (22) act -> LIGAR ID .

    PONTO           reduce using rule 22 (act -> LIGAR ID .)
    SENAO           reduce using rule 22 (act -> LIGAR ID .)


state 20

    (23) act -> DESLIGAR ID .

    PONTO           reduce using rule 23 (act -> DESLIGAR ID .)
    SENAO           reduce using rule 23 (act -> DESLIGAR ID .)


state 21

    (24) act -> ENVIAR ALERTA . ABREPAREN STRING FECHAPAREN ID
    (25) act -> ENVIAR ALERTA . ABREPAREN STRING VIRGULA ID FECHAPAREN ID
    (26) act -> ENVIAR ALERTA . ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids

    ABREPAREN       shift and go to state 33


state 22

    (4) device -> DISPOSITIVO DOISPONTOS ABRECHAVES . ID VIRGULA ID FECHACHAVES
    (5) device -> DISPOSITIVO DOISPONTOS ABRECHAVES . ID FECHACHAVES

    ID              shift and go to state 34


state 23

    (6) cmds -> cmd PONTO cmds .

    $end            reduce using rule 6 (cmds -> cmd PONTO cmds .)


state 24

    (8) cmd -> SET ID IGUAL . var
    (20) var -> . NUM
    (21) var -> . ID

    NUM             shift and go to state 37
    ID              shift and go to state 35

    var                            shift and go to state 36

state 25

    (9) cmd -> SE obs ENTAO . act
    (10) cmd -> SE obs ENTAO . act SENAO act
    (22) act -> . LIGAR ID
    (23) act -> . DESLIGAR ID
    (24) act -> . ENVIAR ALERTA ABREPAREN STRING FECHAPAREN ID
    (25) act -> . ENVIAR ALERTA ABREPAREN STRING VIRGULA ID FECHAPAREN ID
    (26) act -> . ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids

    LIGAR           shift and go to state 10
    DESLIGAR        shift and go to state 11
    ENVIAR          shift and go to state 12

    act                            shift and go to state 38

state 26

    (12) obs -> ID op_logic . var
    (13) obs -> ID op_logic . var ELOGICO obs
    (20) var -> . NUM
    (21) var -> . ID

    NUM             shift and go to state 37
    ID              shift and go to state 35

    var                            shift and go to state 39

state 27

    (14) op_logic -> MAIOR .

    NUM             reduce using rule 14 (op_logic -> MAIOR .)
    ID              reduce using rule 14 (op_logic -> MAIOR .)


state 28

    (15) op_logic -> MENOR .

    NUM             reduce using rule 15 (op_logic -> MENOR .)
    ID              reduce using rule 15 (op_logic -> MENOR .)


state 29

    (16) op_logic -> MAIORIGUAL .

    NUM             reduce using rule 16 (op_logic -> MAIORIGUAL .)
    ID              reduce using rule 16 (op_logic -> MAIORIGUAL .)


state 30

    (17) op_logic -> MENORIGUAL .

    NUM             reduce using rule 17 (op_logic -> MENORIGUAL .)
    ID              reduce using rule 17 (op_logic -> MENORIGUAL .)


state 31

    (18) op_logic -> IGUALIGUAL .

    NUM             reduce using rule 18 (op_logic -> IGUALIGUAL .)
    ID              reduce using rule 18 (op_logic -> IGUALIGUAL .)


state 32

    (19) op_logic -> DIFERENTE .

    NUM             reduce using rule 19 (op_logic -> DIFERENTE .)
    ID              reduce using rule 19 (op_logic -> DIFERENTE .)


state 33

    (24) act -> ENVIAR ALERTA ABREPAREN . STRING FECHAPAREN ID
    (25) act -> ENVIAR ALERTA ABREPAREN . STRING VIRGULA ID FECHAPAREN ID
    (26) act -> ENVIAR ALERTA ABREPAREN . STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids

    STRING          shift and go to state 40


state 34

    (4) device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID . VIRGULA ID FECHACHAVES
    (5) device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID . FECHACHAVES

    VIRGULA         shift and go to state 41
    FECHACHAVES     shift and go to state 42


state 35

    (21) var -> ID .

    PONTO           reduce using rule 21 (var -> ID .)
    ELOGICO         reduce using rule 21 (var -> ID .)
    ENTAO           reduce using rule 21 (var -> ID .)


state 36

    (8) cmd -> SET ID IGUAL var .

    PONTO           reduce using rule 8 (cmd -> SET ID IGUAL var .)


state 37

    (20) var -> NUM .

    PONTO           reduce using rule 20 (var -> NUM .)
    ELOGICO         reduce using rule 20 (var -> NUM .)
    ENTAO           reduce using rule 20 (var -> NUM .)


state 38

    (9) cmd -> SE obs ENTAO act .
    (10) cmd -> SE obs ENTAO act . SENAO act

    PONTO           reduce using rule 9 (cmd -> SE obs ENTAO act .)
    SENAO           shift and go to state 43


state 39

    (12) obs -> ID op_logic var .
    (13) obs -> ID op_logic var . ELOGICO obs

    ENTAO           reduce using rule 12 (obs -> ID op_logic var .)
    ELOGICO         shift and go to state 44


state 40

    (24) act -> ENVIAR ALERTA ABREPAREN STRING . FECHAPAREN ID
    (25) act -> ENVIAR ALERTA ABREPAREN STRING . VIRGULA ID FECHAPAREN ID
    (26) act -> ENVIAR ALERTA ABREPAREN STRING . FECHAPAREN PARA TODOS DOISPONTOS lista_ids

    FECHAPAREN      shift and go to state 45
    VIRGULA         shift and go to state 46


state 41

    (4) device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA . ID FECHACHAVES

    ID              shift and go to state 47


state 42

    (5) device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID FECHACHAVES .

    DISPOSITIVO     reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID FECHACHAVES .)
    SET             reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID FECHACHAVES .)
    SE              reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID FECHACHAVES .)
    LIGAR           reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID FECHACHAVES .)
    DESLIGAR        reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID FECHACHAVES .)
    ENVIAR          reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID FECHACHAVES .)


state 43

    (10) cmd -> SE obs ENTAO act SENAO . act
    (22) act -> . LIGAR ID
    (23) act -> . DESLIGAR ID
    (24) act -> . ENVIAR ALERTA ABREPAREN STRING FECHAPAREN ID
    (25) act -> . ENVIAR ALERTA ABREPAREN STRING VIRGULA ID FECHAPAREN ID
    (26) act -> . ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids

    LIGAR           shift and go to state 10
    DESLIGAR        shift and go to state 11
    ENVIAR          shift and go to state 12

    act                            shift and go to state 48

state 44

    (13) obs -> ID op_logic var ELOGICO . obs
    (12) obs -> . ID op_logic var
    (13) obs -> . ID op_logic var ELOGICO obs

    ID              shift and go to state 18

    obs                            shift and go to state 49

state 45

    (24) act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN . ID
    (26) act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN . PARA TODOS DOISPONTOS lista_ids

    ID              shift and go to state 50
    PARA            shift and go to state 51


state 46

    (25) act -> ENVIAR ALERTA ABREPAREN STRING VIRGULA . ID FECHAPAREN ID

    ID              shift and go to state 52


state 47

    (4) device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID . FECHACHAVES

    FECHACHAVES     shift and go to state 53


state 48

    (10) cmd -> SE obs ENTAO act SENAO act .

    PONTO           reduce using rule 10 (cmd -> SE obs ENTAO act SENAO act .)


state 49

    (13) obs -> ID op_logic var ELOGICO obs .

    ENTAO           reduce using rule 13 (obs -> ID op_logic var ELOGICO obs .)


state 50

    (24) act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN ID .

    PONTO           reduce using rule 24 (act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN ID .)
    SENAO           reduce using rule 24 (act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN ID .)


state 51

    (26) act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA . TODOS DOISPONTOS lista_ids

    TODOS           shift and go to state 54


state 52

    (25) act -> ENVIAR ALERTA ABREPAREN STRING VIRGULA ID . FECHAPAREN ID

    FECHAPAREN      shift and go to state 55


state 53

    (4) device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES .

    DISPOSITIVO     reduce using rule 4 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES .)
    SET             reduce using rule 4 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES .)
    SE              reduce using rule 4 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES .)
    LIGAR           reduce using rule 4 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES .)
    DESLIGAR        reduce using rule 4 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES .)
    ENVIAR          reduce using rule 4 (device -> DISPOSITIVO DOISPONTOS ABRECHAVES ID VIRGULA ID FECHACHAVES .)


state 54

    (26) act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS . DOISPONTOS lista_ids

    DOISPONTOS      shift and go to state 56


state 55

    (25) act -> ENVIAR ALERTA ABREPAREN STRING VIRGULA ID FECHAPAREN . ID

    ID              shift and go to state 57


state 56

    (26) act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS . lista_ids
    (27) lista_ids -> . ID VIRGULA lista_ids
    (28) lista_ids -> . ID

    ID              shift and go to state 59

    lista_ids                      shift and go to state 58

state 57

    (25) act -> ENVIAR ALERTA ABREPAREN STRING VIRGULA ID FECHAPAREN ID .

    PONTO           reduce using rule 25 (act -> ENVIAR ALERTA ABREPAREN STRING VIRGULA ID FECHAPAREN ID .)
    SENAO           reduce using rule 25 (act -> ENVIAR ALERTA ABREPAREN STRING VIRGULA ID FECHAPAREN ID .)


state 58

    (26) act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids .

    PONTO           reduce using rule 26 (act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids .)
    SENAO           reduce using rule 26 (act -> ENVIAR ALERTA ABREPAREN STRING FECHAPAREN PARA TODOS DOISPONTOS lista_ids .)


state 59

    (27) lista_ids -> ID . VIRGULA lista_ids
    (28) lista_ids -> ID .

    VIRGULA         shift and go to state 60
    PONTO           reduce using rule 28 (lista_ids -> ID .)
    SENAO           reduce using rule 28 (lista_ids -> ID .)


state 60

    (27) lista_ids -> ID VIRGULA . lista_ids
    (27) lista_ids -> . ID VIRGULA lista_ids
    (28) lista_ids -> . ID

    ID              shift and go to state 59

    lista_ids                      shift and go to state 61

state 61

    (27) lista_ids -> ID VIRGULA lista_ids .

    PONTO           reduce using rule 27 (lista_ids -> ID VIRGULA lista_ids .)
    SENAO           reduce using rule 27 (lista_ids -> ID VIRGULA lista_ids .)

